CSS additions for notification badges, e.g. to advertise new content etc. The base.css file has had new content block definitions added for higher contrast and improved legibility for users with dyslexia, whilst the main.css file has the definitions for the badge constuct and position. By using them together notifications can be coloured appropriately to the content they are being added to in order to ensure they stand out visually. Accessibility for screen readers is handled within the HTML of the notification badge element.

--- a/css/base.css
+++ b/css/base.css
@@ -52,6 +52,18 @@ a:hover
     background-color: #f5f9ff;
 }
 
+.highContrastBlock
+{
+    background-color: #212121;
+    color: #fff;
+}
+
+.highContrastBlockDyslexia
+{
+    background-color: #ffff00;
+    color: #000;
+}
+
 h1, h2, h3, h4, h5, h6, header
 {
     font-family: 'Roboto', sans-serif;
